--- a/src/pages/singlegoogle002.html
+++ b/src/pages/singlegoogle002.html
@@ -20,8 +20,8 @@
 <body>
 <div class="wrapper">
     <div class="s-left">
-        <header class="head s-head">
-            <nav class="navbar navbar-default noMargin fl">
+        <header class="s-head">
+            <nav class="navbar noMargin fl">
                 <div class="navbar-header">
                     <ul class="s-menu">
                         <li class="menu-item">操控
@@ -73,49 +73,49 @@
             </div>
         </header>
         <div class="top-flight">
-            <div class="single-left allPush">
-                <div class="single-left-block">
+            <div class="single-top allPush">
+                <div class="single-top-block">
                     <p>无人机ID
-                        <span id="heartbeat.id_uav_xyi">1</span>
+                        <span class="f-status" id="heartbeat.id_uav_xyi">1</span>
                     </p>
                 </div>
-                <div class="single-left-block">
+                <div class="single-top-block">
                     <p>系统状态
-                        <span id="heartbeat.base_mode" data-value="0">离线</span>
+                        <span class="f-status" id="heartbeat.base_mode" data-value="0">离线</span>
                     </p>
                 </div>
-                <div class="single-left-block">
+                <div class="single-top-block">
                     <p>电池余量
-                        <span id="battery_status.battery_remaining">100</span>&nbsp;
+                        <span class="f-status" id="battery_status.battery_remaining">100</span>
                         <small>%</small>
                     </p>
                 </div>
-                <div class="single-left-block">
+                <div class="single-top-block">
                     <p>相对高度
-                        <span id="global_position_int.relative_alt">0</span>&nbsp;
+                        <span class="f-status" id="global_position_int.relative_alt">0</span>
                         <small>m</small>
                     </p>
                 </div>
-                <div class="single-left-block">
+                <div class="single-top-block">
                     <p>飞行距离
-                        <span id="FlightLength">0</span>&nbsp;
+                        <span class="f-status" id="FlightLength">0</span>
                         <small>m</small>
                     </p>
                 </div>
-                <div class="single-left-block">
+                <div class="single-top-block">
                     <p>失联时间
-                        <span id="losttime">0</span>&nbsp;
+                        <span class="f-status" id="losttime">0</span>
                         <small>s</small>
                     </p>
                 </div>
-                <div class="single-left-block">
+                <div class="single-top-block">
                     <p>控制输出
-                        <span id="battery_status.fc_output_ave">0</span>
+                        <span class="f-status" id="battery_status.fc_output_ave">0</span>
                     </p>
                 </div>
-                <div class="single-left-block">
+                <div class="single-top-block">
                     <p>卫星数
-                        <span id="gps_raw.satellites_visible">0</span>
+                        <span class="f-status" id="gps_raw.satellites_visible">0</span>
                     </p>
                 </div>
             </div>
@@ -166,83 +166,9 @@
                 </div>
                 <div class="hideShowBtn"></div>
             </div>
-            <div class="single-center-top">
-                <ul class="menu">
-                    <li class="menu-li"
-                        onclick="if($(this).hasClass('selected')){$('.menu-li.selected').removeClass('selected');$('.sub-menu').hide();}else{$(this).addClass('selected');$('.sub-menu').hide();$(this).children('ul').show();}">
-                        操控<img class="left" src="../images/singlePage/groupline.png"><img
-                            style="width: calc(100% + 20px);left:-10px;list-style: none;" class="bottom"
-                            src="../images/singlePage/c.png">
-                        <ul class="sub-menu" style="width: calc(100% + 10px);">
-                            <li onclick="uavStart()">开始起飞</li>
-                            <li onclick="uavStop()">应急着陆</li>
-                            <!-- <li>暂定自主任务</li>
-                        <li>恢复自主任务</li> -->
-                            <li onclick="uavCtrlByHands(1)">人工操作</li>
-                            <li id="ruleZoom">测距</li>
-                        </ul>
-                    </li>
-                    <li class="menu-li"
-                        onclick="if($(this).hasClass('selected')){$('.menu-li.selected').removeClass('selected');$('.sub-menu').hide();}else{$(this).addClass('selected');$('.sub-menu').hide();$(this).children('ul').show();}">
-                        数据<img class="left" src="../images/singlePage/groupline.png"><img
-                            style="width: calc(100% + 10px);"
-                            class="bottom"
-                            src="../images/singlePage/a.png">
-                        <ul class="sub-menu" style="width: calc(100% + 10px);list-style: none;">
-                            <li><a href="javascript:;"
-                                   onclick="window.location.href = 'realtimedata.html?'+document.getElementById('heartbeat.id_uav_xyi').innerText"
-                                   target="_blank" style="color: #bbfbfc!important;">实时数据分析</a></li>
-                            <li data-target="#routeLine" data-toggle="modal" style="color: #bbfbfc!important;">
-                                保存航路
-                            </li>
-                            <li data-target="#searchLine" data-toggle="modal" style="color: #bbfbfc!important;">
-                                查找航路
-                            </li>
-                            <li style="color: #bbfbfc!important;" onclick="flightPointDeleteAll()">清空本地航路</li>
-                            <li style="color: #bbfbfc!important;" id="clearRemoteData">清空远程航路</li>
-                        </ul>
-                    </li>
-                    <li class="menu-li"
-                        onclick="if($(this).hasClass('selected')){$('.menu-li.selected').removeClass('selected');$('.sub-menu').hide();}else{$(this).addClass('selected');$('.sub-menu').hide();$(this).children('ul').show();}">
-                        设置<img class="left" src="../images/singlePage/groupline.png"><img
-                            style="width: calc(100% + 10px);"
-                            class="bottom"
-                            src="../images/singlePage/b.png">
-                        <ul class="sub-menu" style="width: calc(100% + 10px);list-style: none;">
-                            <li data-toggle="modal" data-target="#pid">控制调参</li>
-                            <li onclick="backToMain()">回到主页</li>
-                            <li onclick="getControl()">申请控制</li>
-                            <li data-toggle="modal" data-target="#offsetSet">设置飞机偏移</li>
-                            <li data-toggle="modal" data-target="#emLandInfoSet">设置应急着陆点</li>
-                            <li data-toggle="modal" data-target="#localGpsOffset">设置相对高度差</li>
-                            <li data-toggle="modal" data-target="#XPPid">XP控制调参</li>
-                            <!-- <li onclick="giveupControl()">放弃控制</li> -->
-                        </ul>
-                    </li>
-                </ul>
-            </div>
+
 
             <div class="single-center-left col-md-offset-2">
-                <div class="top-status">
-                    <div class="curcontrol-status">
-                        <p>当前权限：<span id="curControlStatus"></span></p>
-                    </div>
-                    <div class="communicate-cont">
-                        <!--<p>连接状态：正常&nbsp;&nbsp;<span class="singnal-status"></span>断开&nbsp;&nbsp;<span-->
-                        <!--class="singnal-status singnal-error"></span>-->
-                        <!--</p>-->
-                        <p><span class="ss-span">WS&nbsp;&nbsp;&nbsp;</span><span
-                                class="ss-span">3G&nbsp;&nbsp;</span>
-                            <!--<span-->
-                            <!--class="ss-span">地面站&nbsp;&nbsp;</span>-->
-                        </p>
-                        <p class="singnal-status-gp"><span class="singnal-status" id="signalWS"></span><span
-                                class="singnal-status"
-                                id="signal3G"></span>
-                            <!--<span class="singnal-status singnal-error" id="signalGround"></span>-->
-                        </p>
-                    </div>
-                </div>
 
                 <div class="left-icon" title="创建航路点" id="addStartEndPoint" style="display: none;">
                     <img src="../images/singlePage/plusbg.png"/>
@@ -262,36 +188,11 @@
                 <div class="left-icon" title="定位飞机" id="locationFlight" onclick="locationFlight()">
                     <img src="../images/singlePage/gps02.png"/>
                 </div>
-                <!--
-            <div class="left-icon" title="放大">
-                <img src="../images/singlePage/plus.png" />
-            </div>
-            <div class="left-icon" title="缩小">
-                <img src="../images/singlePage/less.png" />
-            </div>-->
             </div>
             <div class="single-center-middle col-md-7 col-md-offset-2 middle-showHideDiv">
                 <!-- 日志轮播 -->
                 <div class="txtMarquee-top">
-                    <!--  <div class="hd">
-                    <a class="next"></a>
-                    <a class="prev"></a>
-                </div> -->
-                    <!--<div class="bd">-->
-                    <!--<ul class="infoList" id="logList">-->
-                    <!--<li><span class="date-infor">2011-11-11</span><span class="log-infor">上线</span></li>-->
-                    <!--</ul>-->
-                    <!--</div>-->
-                    <!--<marquee direction="up" behavior="scroll" scrollamount="2" scrolldelay="0" loop="-1" width="240"-->
-                    <!--height="85"-->
-                    <!--bgcolor="transparent"  vspace="10"  hspace="10" behavior="alternate" style="color: #f00;"-->
-                    <!--id="logList">-->
-                    <!--<marquee direction="up" behavior="scroll" scrollamount="2" scrolldelay="0" loop="-1" width="240" height="85" bgcolor="transparent" behavior="alternate" style="color: #f00;" id="logList">-->
                     <div id="logList">
-                        <!--<p><span class="date-infor">2011-11-11</span><span class="log-infor">上线</span>-->
-                        <!--</p>-->
-                        <!--<p><span class="date-infor">2011-11-11</span><span class="log-infor">上线</span>-->
-                        <!--</p>-->
                     </div>
                 </div>
                 <div class="block">
@@ -352,7 +253,6 @@
                 <div class="block">
                     <p>
                         电池电压 : <span id="battery_status.voltages">0</span>
-                        <!-- <small>V</small> -->
                     </p>
                     <p>
                         电池电流 : <span id="battery_status.current_battery">0</span>
@@ -364,31 +264,6 @@
                     </p>
                 </div>
             </div>
-            <!--<div class="col-md-7 allHeight noPadding">
-            <div class="single-center allPush">
-                <div class="single-center-top">
-                    <ul class="menu">
-                        <li class="menu-li"
-                            onclick="if($(this).hasClass('selected')){$(this).removeClass('selected')}else{$(this).addClass('selected')}$(this).children('ul').toggle();">
-                            操控<img class="left" src="../images/singlePage/groupline.png"><img
-                                style="width: calc(100% + 20px);left:-10px;" class="bottom"
-                                src="../images/singlePage/c.png">
-                            <ul class="sub-menu" style="width: calc(100% + 10px);">
-                                <li>开始起飞</li>
-                                <li>应急着陆</li>
-                                <li>暂定自主任务</li>
-                                <li>恢复自主任务</li>
-                                <li>人工操作</li>
-                            </ul>
-                        </li>
-                        <li class="menu-li">数据<img class="left" src="../images/singlePage/groupline.png"><img
-                                style="width: calc(100% + 10px);" class="bottom" src="../images/singlePage/a.png"></li>
-                        <li class="menu-li">设置<img class="left" src="../images/singlePage/groupline.png"><img
-                                style="width: calc(100% + 10px);" class="bottom" src="../images/singlePage/b.png"></li>
-                    </ul>
-                </div>
-            </div>
-        </div>-->
             <div class="col-md-3 single-md-3 allHeight noPadding" style="top: 0;right: 0">
                 <div class="single-right allPush">
                     <div class="single-right-up" style="height:calc(100% - 125px);">
@@ -971,13 +846,6 @@
         });
 
     });
-    //    jQuery(".txtMarquee-top").slide({
-    //        mainCell: ".bd ul",
-    //        autoPlay: true,
-    //        effect: "topMarquee",
-    //        vis: 2,
-    //        interTime: 50
-    //    });
 </script>
 
 </html>
