10091922新版 gene单机页面基本布局更改及部分js

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
 </div>
 <!--<script data-main="js/main.js" defer src="js/libs/require.js"></script>-->
 <script src="js/jquery.js"></script>
-<script src="js/libs/bootstrap.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 <script>
     var enter = "";
